yaml-examples/phpservermon/psm-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: phpservermon
  name: phpservermon
spec:
  ports:
  - name: "80"
    port: 80
    targetPort: 80
  selector:
    app: phpservermon
